syntax = "proto3";

package com.github.Semior001.groxy.example.mock;

import "google/protobuf/empty.proto";

service ExampleService {
  rpc Stub(StubRequest) returns (SomeOtherResponse);
  rpc Error(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc NotFound(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service Upstream {
  rpc Get(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message Dependency {
  string first = 1;
  string second = 2;
  string value = 6;

  reserved 3, 4, 5;
}

message StubRequest {
  string message = 1;
}

message SomeOtherResponse {
  string message = 1;
  int32  code = 2;
  Dependency dependency = 3;
}